--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body,
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  transition: all 300ms;
+}
+li {
+  list-style: none;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid rgb(214, 214, 214);
+  cursor: pointer;
+  &:hover {
+    background-color: rgb(161, 161, 161);
+  }
+}
+
+.active-link {
+  font-weight: 700;
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: black;
+}
+
+.content {
+  border: 1px solid rgb(214, 214, 214);
+  font-size: 50px;
+  height: 700px;
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 800;
+}
