--- a/src/app/module-a/module-achild-a/module-achild-a.component.html
+++ b/src/app/module-a/module-achild-a/module-achild-a.component.html
@@ -1,1 +1,19 @@
 <p>module-a child-a works!</p>
+<p>{{ loadDate }}</p>
+<ul>
+  <li>
+    <a [routerLink]="['/module-a/child-a/1']" routerLinkActive="active-link"
+      >item 1</a
+    >
+  </li>
+  <li>
+    <a [routerLink]="['/module-a/child-a/2']" routerLinkActive="active-link"
+      >item 2</a
+    >
+  </li>
+  <li>
+    <a [routerLink]="['/module-a/child-a/3']" routerLinkActive="active-link"
+      >item 3</a
+    >
+  </li>
+</ul>
