--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,25 @@ body,
   box-sizing: border-box;
   transition: all 300ms;
 }
-li {
+
+.header {
+  width: 100vw;
+  height: 70px;
+  background-color: rgb(160, 160, 160);
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // flex: 1 auto;
+}
+.main li {
   list-style: none;
   padding: 20px;
   margin: 20px;
@@ -23,10 +41,13 @@ li {
   font-size: 30px;
 }
 
-a {
+.main a {
   text-decoration: none;
   font-size: 24px;
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .content {
