--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,17 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   background-color: gray;
+}
+
+.tab {
+  height: 50px;
+  display: flex;
+  border-radius: 3px;
+  background-color: rgb(202, 202, 202);
+  padding: 10px 20px;
+  margin: auto 10px;
+  align-items: center;
+  font-size: 20px;
 }
