--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,31 @@
   display: flex;
   border-radius: 3px;
   background-color: rgb(202, 202, 202);
-  padding: 10px 20px;
+  padding: 10px 5px;
   margin: auto 10px;
   align-items: center;
   font-size: 20px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+a{
+  text-decoration: none;
+  // font-size: 24px;
+  color: black;
+}
+
+.close-btn {
+  // padding: 10px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+  border-radius: 50%;
+  &:hover {
+    font-size: 25px;
+  }
 }
